# noteban

./: AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  mise.toml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml  release-tag.yml  update-nix-hash.yml
aur/: PKGBUILD  README.md  update-pkgbuild.sh
nix/: README.md  default.nix
scripts/: bump-version.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: db.rs  mod.rs  queries.rs  schema.rs  sync.rs
src-tauri/src/commands/: mod.rs  notes.rs  sync.rs
src-tauri/src/utils/: mod.rs  tags.rs
src/components/editor/: KeyboardAccessoryBar.css  KeyboardAccessoryBar.tsx  MarkdownEditor.css  MarkdownEditor.tsx  NoteEditor.tsx  TagSuggestionButton.css  TagSuggestionButton.tsx  checkboxPlugin.ts  imagePlugin.ts  index.ts  linkPlugin.ts  listContinuationPlugin.ts  mathPlugin.ts  tagAutocompletePlugin.ts  tagPlugin.ts
src/components/kanban/: KanbanBoard.css  KanbanBoard.tsx  KanbanCard.css  KanbanCard.tsx  KanbanColumn.css  KanbanColumn.tsx
src/components/layout/: AboutModal.css  AboutModal.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ContextMenu.css  ContextMenu.tsx  DragBar.css  DragBar.tsx  FolderContextMenu.tsx  FolderTree.css  FolderTree.tsx  Header.css  Header.tsx  Layout.css  Layout.tsx  MobileActionSheet.css  MobileActionSheet.tsx  MoveNoteModal.css  MoveNoteModal.tsx  ProfileSwitcher.css  ProfileSwitcher.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TagCloud.css  TagCloud.tsx  UpdateNotification.css  UpdateNotification.tsx  index.ts
src/hooks/: index.ts  useDebounce.ts  useLongPress.ts  useTags.ts  useUpdater.ts
src/lib/: accessoryBridge.ts
src/services/: ollamaService.ts
src/stores/: folderStore.ts  index.ts  notesStore.ts  settingsStore.ts  syncStore.ts  uiStore.ts  updateStore.ts
src/styles/: globals.css
src/types/: folder.ts  kanban.ts  note.ts  settings.ts  sync.ts  tagFilter.ts
src/utils/: debugLogger.ts  externalOpen.ts  mathEvaluator.test.ts  mathEvaluator.ts  platform.ts  settingsMigration.ts  tagFilterMatcher.ts  tagFilterParser.ts  tagParser.ts  windowTitle.ts
