[package]
name = "noteban"
version = "4.1.0"
description = "A notes-first app with kanban organization"
authors = ["you"]
license = "MIT"
repository = "https://github.com/noteban/noteban"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "noteban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = { version = "2.5.1", features = ["watch"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"
serde_yaml = "0.9"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2.3.2"
walkdir = "2.5"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6.0"
sha2 = "0.11"
regex = "1.12"
lazy_static = "1.4"
tauri-plugin-opener = "2"
atomicwrites = "0.4"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.21"
url = "2.5"
urlencoding = "2.1"
rustls = { version = "0.23.38", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-updater = "2"
